# d3-agentic-project-template

./: README.md  pyproject.toml
.context/: AGENTS.md  BEST_PRACTICES.md
.context/EXAMPLES/agents/: a2a_utils.py
.context/EXAMPLES/agents/template_agent/: a2a_handler.py  agent.py  config.yaml  schema.py
.devcontainer/: Dockerfile  devcontainer.json  onCreate.sh  updateContent.sh
.github/workflows/: docker-publish.yml
