[project]
authors = [{name = "Cordero Core", email = "127983572+uwcdc@users.noreply.github.com"}]
dependencies = []
name = "d3-project-template"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
d3_project_template = { path = ".", editable = true }

[tool.pixi.tasks]
